# AI-AGENT

./: .gitignore  AGENTS.md  README.md  factorial.py  main.py  pyproject.toml
.agent_scratch/artifacts/: roadmap_project_roadmap.md
agent/: agents.py  event.py  process_manager.py
ai_agent/utils/: buggy_math.py
client/: llm_client.py  response.py
config/: config.py
context/: manager.py
prompt/: system_prompt.py
tests/: test_buggy_math.py  test_config.py  test_context_manager.py  test_test_runner.py
tools/: base.py  mcp_client.py  mcp_tool.py  registry.py
tools/built_in/: __init__.py  artifact.py  grep_search.py  list_dir.py  memory.py  read_file.py  replace.py  screenshot.py  shell.py  test_runner.py  web_search.py  write_file.py
ui/: textual_app.py  tui.py
utils/: agents_md.py  git.py  paths.py  text.py
